# microxlsx

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: pylint.yml  python-publish.yml
src/microxlsx/: __init__.py  core.py  utils.py
tests/: test_core.py  test_openpyxl_roundtrip.py  test_utils.py
